--- a/config_template/sb-config-1.12-beta-adblock.json
+++ b/config_template/sb-config-1.12-beta-adblock.json
@@ -312,6 +312,10 @@
       ]
     },
     {
+      "type":"selector",
+      "tag":"adblock"
+    },
+    {
       "tag":"China",
       "type":"selector",
       "outbounds":[
@@ -519,6 +523,10 @@
       {
         "rule_set": ["geoip-cn", "geosite-cn"],
         "outbound": "China"
+      },
+       {
+        "rule_set": "adblock",
+        "outbound": "adblock"
       }
     ],
     "rule_set": [
@@ -717,6 +725,13 @@
         "format": "binary",
         "url": "https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@sing/geo/geosite/geolocation-!cn.srs",
         "download_detour": "direct"
+      },
+      {
+        "tag": "adblock",
+        "type": "remote",
+        "format": "source",
+        "url": "https://raw.githubusercontent.com/REIJI007/AdBlock_Rule_For_Sing-box/main/adblock_reject.json",
+        "update_interval": 120 
       },
       {
         "tag": "geoip-cn",
