--- a/config_template/sb-config-1.12-beta-adblock.json
+++ b/config_template/sb-config-1.12-beta-adblock.json
@@ -312,10 +312,6 @@
       ]
     },
     {
-      "type":"block",
-      "tag":"adblock"
-    },
-    {
       "tag":"China",
       "type":"selector",
       "outbounds":[
@@ -523,10 +519,6 @@
       {
         "rule_set": ["geoip-cn", "geosite-cn"],
         "outbound": "China"
-      },
-       {
-        "rule_set": "adblock",
-        "outbound": "adblock"
       }
     ],
     "rule_set": [
@@ -749,4 +741,34 @@
       }
     ]
   }
+}
+{
+  "route": 
+  {
+    "rules": 
+    [
+      {
+        "rule_set": "adblock",                  // 应用名为 "adblock" 的规则集
+        "outbound": "adblock"                   // 命中规则集的流量将导流到名为 "adblock" 的出站策略进行拦截
+      }
+    ],
+    "rule_set": 
+    [
+      {
+
+        "tag": "adblock",                       // 名为 "adblock"的规则集标签
+        "type": "remote",                       // 远程规则集
+        "format": "binary",                     // 或 "binary"，取决于规则文件格式
+        "url": "https://raw.githubusercontent.com/REIJI007/AdBlock_Rule_For_Sing-box/main/adblock_reject.srs",
+        "update_interval": 120                  // 更新间隔，单位为秒
+      }
+    ]
+  },
+  "outbounds": 
+  [
+    {
+      "type": "block",
+      "tag": "adblock"                          // 配合远程 "rule_set" 进行域名拦截
+    }
+  ]
 }
